[package]
name = "rustyblobjectstore"
version = "0.3.0"
authors = ["David Wilemski <david@wilemski.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
hex = "0.4"
http = "0.2"
log = "0.4"
sha2 = "0.10"
# needs tokio 1.0 compat, can remove git / ref after
# https://github.com/launchbadge/sqlx/pull/983 is released.
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
